05-Networking-and-Services/05-Ingress/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.local  # এই ডোমেইনে রিকোয়েস্ট আসবে
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service # এই সার্ভিসে ট্রাফিক যাবে
            port:
              number: 80
